apps/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  type: NodePort
  selector:
    app: vaultwarden
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30082
    protocol: TCP
    name: http
